# yt-saver

./: .gitignore  README.md  pyproject.toml
examples/: yt-dlp-cheatsheet.md
src/yt_saver/: cli.py  config.py  defaults.yaml  downloader.py  profiles.py
