[build-system]
requires = ["setuptools>=68", "wheel", "validate-pyproject"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-saver"
version = "0.1.0"
description = "Opinionated yt-dlp wrapper: clean names, subs/metadata, anti-429, archives, per-item/per-playlist subdirs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

# ВАЖНО: убрали email, чтобы не падал validate-pyproject
authors = [
  { name = "Anna Parfenenko" }
]

dependencies = [
  "yt-dlp>=2025.1.0",
  "PyYAML>=6.0",
]

[project.scripts]
ytsave = "yt_saver.cli:main"

[project.urls]
Homepage = "https://github.com/aparfenen/yt-saver"
Issues = "https://github.com/aparfenen/yt-saver/issues"
